--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuetify": "^3.3.1"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.3.5"
   }
